# sound_mixer_lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wavheader.h  wavmixer.cpp
audio_platform/: audio_platform.h
audio_platform/src/: platform_sdl.cpp
audiomixer/: audioapi.h  audiomixer.h  audiomixer_api.h  audioplayer.h  audioreader.h  audiosets.h  mixer_test.cpp  platform_sdl.cpp
audiomixer/src/: audioapi.cpp  audiomixer.cpp  audiomixer.h  audioreader.cpp  audioreader.h
audiomixer_lib/: CMakeLists.txt
audiomixer_lib/audio_platform/: audio_platform.h
audiomixer_lib/audio_platform/src/: platform_sdl.cpp
audiomixer_lib/audiomixer/: wav_header.h
audiomixer_lib/audiomixer/src/: audioapi.cpp  audiomixer.cpp  audiomixer.h  audioreader.cpp  audioreader.h
audiomixer_lib/include/: audio_platform.h  audiomixer_api.h
audiomixer_lib/sdl/src/: audio.c
audiomixer_lib/test/: CMakeLists.txt  test.cpp
demo/: CMakeLists.txt  cl_parser.cpp  cl_parser.hpp  mixer_demo.cpp  platform_sdl.cpp
demo/cfg/: audio.json.cfg  audio_nature.json.cfg
prototypes/: concept.cpp  wavmixer.cpp
sdl/src/: audio.c
soundmixer_lib/: CMakeLists.txt
soundmixer_lib/include/: doxygen.info.h  platform_deps.h  soundmixer_api.h
soundmixer_lib/soundmixer/: wav_header.h
soundmixer_lib/soundmixer/src/: soundmixer.cpp  soundmixer.h  soundmixer_api.cpp  soundreader.cpp  soundreader.h
soundmixer_lib/test/: CMakeLists.txt  test.cpp
